crates/uitest/fixtures/ty_check/assoc_const_diagnostic_parity.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/assoc_const_diagnostic_parity.fe
---
error[8-0000]: type mismatch
   ┌─ assoc_const_diagnostic_parity.fe:21:21
   │
21 │     const C: u256 = true
   │                     ^^^^ expected `u256`, but `bool` is given

error[8-0000]: type mismatch
   ┌─ assoc_const_diagnostic_parity.fe:27:21
   │
27 │     const C: u256 = true
   │                     ^^^^ expected `u256`, but `bool` is given
